mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
tbaMUD 3.59
[Jan 21 2009] - Jamdog 
  Added trigedit variable %move% to teleport objects.
  Fixed memory leak in generic_complete_quest.
  A bug fix to player attachable scripts.
  A better fix to the DIKU double attack by ordering a mob to save its master.
  Fix to remove weight restrictions for immortals.
tbaMUD 3.58
[Jan 18 2009] - Rumble
  Updated World and files for 3.58 release.
  Bug fix for column_list to properly display commands, socials, wizhelp, etc. (thanks Jamdog)
[Jan 15 2009] - Fizban
  Immortals can now never have their hands full when you attempt to hand them an item.
[Jan 13 2009] - Rumble
  Questmaster variable changed from an rnum to a vnum. (thanks Jamdog)
  Fixed a bug in dg_variables.c find_replacment with the new quest variable. (thanks Jamdog)
  Fixed message when setting gold abnormally high.
[Jan 09 2009] - Fizban
  Fixed a DIKU bug in do_rescue allowing players to get twice as many attacks per round. (thanks Zordrac)
  Fixed Bug Where Questmaster rnums didn't previously update. (thanks Tails)
[Jan 05 2009] - Rumble
  Fix to allow non-helper aggro mobs be agressive. (thanks Kvasir)
[Dec 28 2008] - Rumble
  Added a "Syntax: export zone vnum" for the export command instead of defaulting to 0. (thanks Vatiken)
  Fixed bad usage of num_of_saving_throws and moved define to structs.h. (thanks Vatiken)
  Added trigedit variables questdone and quest. (thanks Jamdog)
[Dec 23 2008] - Rumble
  Fix for drink containers improperly showing empty due to unlimited container addition. (thanks Parnassus)
  Fix for qedit crash when trying to list non-existent next quest. (thanks Tails)