@@ -158,7 +158,7 @@ void convert(char *filename)
   FILE *fl, *outfile, *index_file;
   struct char_file_u_plrtoascii player;
   char index_name[40], outname[40], bits[127];
-  int i;
+  int i, j;
   struct char_special_data_saved_plrtoascii *csds;
   struct player_special_data_saved_plrtoascii *psds;
   struct char_ability_data_plrtoascii *cad;
@@ -175,7 +175,7 @@ void convert(char *filename)
     exit(1);
   }
   for (;;) {
-    fread(&player, sizeof(struct char_file_u_plrtoascii), 1, fl);
+    j = fread(&player, sizeof(struct char_file_u_plrtoascii), 1, fl);
     if (feof(fl)) {
       fclose(fl);
       fclose(index_file);
